[tool.poetry]
name = "claude-cli"
version = "0.1.0rc1"
description = "Natural language interface for command line using Claude AI"
readme = "README.md"
license = "MIT"
packages = [{ include = "claude_cli", from = "./src" }]
keywords = ["cli", "claude", "ai", "shell", "automation"]
authors = ["Ndamulelo Nemakhavhani <ndamulelo@rihonegroup.com>"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
homepage = "https://github.com/ndamulelonemakh/claude-cli"
repository = "https://github.com/ndamulelonemakh/claude-cli#README"

[tool.poetry.scripts]
claude = "claude_cli.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
